# AI-main

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISASTER_RECOVERY.md  LICENSE  SECURITY.md  TESTING.md  build.sh  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  cleanup.yml  codeql.yml  cross-platform.yml  deploy.yml  integration-tests.yml  load-testing.yml  monitoring.yml
AI-main-main/: Makefile  PRIVACY_POLICY.md  README.md  deploy.sh  docker-compose.yml
AI-main-main/.devcontainer/: devcontainer-lock.json
AI-main-main/.github/: dependabot.yml
AI-main-main/.github/ISSUE_TEMPLATE/: bug_report.md
AI-main-main/.github/workflows/: backup.yml  cd.yml  coverage.yml  dependencies.yml  docker-scan.yml  docs.yml  release.yml
AI-main-main/config/: config.toml
AI-main-main/crates/common/: Cargo.toml
AI-main-main/crates/common/src/: auth.rs  cache.rs  encryption.rs  main.rs  models.rs  predictor.rs  utils.rs
AI-main-main/crates/common/src/middleware/: error_handler.rs
AI-main-main/crates/content_creation_ai/: Cargo.toml
AI-main-main/crates/cpp_module/: Cargo.toml
AI-main-main/crates/shared/: Cargo.toml
AI-main-main/crates/supply_chain_ai/: Cargo.toml
AI-main-main/crates/supply_chain_ai/src/: data_processing.rs  lib.rs  optimization.rs
AI-main-main/crates/supply_chain_ai/tests/: integration_tests.rs
AI-main-main/dockerfiles/: crates_automl_Dockerfile  crates_common_Dockerfile  crates_content_creation_ai_Dockerfile  crates_cpp_module_Dockerfile  crates_frontend_Dockerfile  crates_healthcare_ai_Dockerfile  crates_personalization_engine_Dockerfile  crates_rust_anomaly_detector_Dockerfile  crates_rust_service_Dockerfile  crates_shared_Dockerfile  crates_supply_chain_ai_Dockerfile  crates_vr_ar_ai_Dockerfile
AI-main-main/manifests/: ai-chatbot-deployment.yaml  ai-chatbot-service.yaml  content-creation-ai-service.yaml  cybersecurity-ai-deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  healthcare-ai-deployment.yaml  healthcare-ai-service.yaml  personalization-engine-deployment.yaml  predictive-analytics-deployment.yaml
AI-main-main/monitoring/: prometheus.yml
AI-main-main/scripts/: backup.sh  collect_metrics.sh  load_test.js  pre-commit  process_metrics.sh  update_dependencies.sh  wait-for-service.sh
crates/ai_chatbot/: Cargo.toml
crates/ai_chatbot/src/: api.rs  config.rs  data_processing.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  services.rs  utils.rs
crates/ai_chatbot/src/handlers/: metrics.rs
crates/ai_chatbot/src/tests/: chat_endpoint_tests.rs
crates/ai_chatbot/tests/: health_checks_tests.rs  integration_tests.rs
crates/ai_consulting/: Cargo.toml
crates/ai_consulting/src/: api.rs  auth.rs  data_processing.rs  errors.rs  main.rs  metrics.rs  models.rs
crates/automl/: Cargo.toml
crates/automl/benches/: optimization_benchmarks.rs
crates/automl/src/: api.rs  config.rs  data_processing.rs  errors.rs  evaluation.rs  handlers.rs  hyperparameter_tuning.rs  lib.rs  main.rs  metrics.rs  model_search.rs  models.rs  services.rs  telemetry.rs  utils.rs
crates/automl/src/optimization/: mod.rs  nas.rs  optuna.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  config.rs  data_processing.rs  db.rs  errors.rs  lib.rs  main.rs  metrics.rs  run.rs  state.rs  validators.rs
crates/common/src/middleware/: mod.rs
crates/content_creation_ai/: Cargo.toml
crates/content_creation_ai/src/: lib.rs  media_generation.rs  personalization.rs
crates/content_creation_ai/tests/: integration_tests.rs
crates/cpp_module/: Cargo.toml
crates/cybersecurity_ai/: Cargo.toml
crates/cybersecurity_ai/src/: api.rs  lib.rs  threat_detection.rs  vulnerability_assessment.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: chat.rs  db.rs  errors.rs  index.rs  main.rs
crates/frontend/src/components/: loading.rs
crates/frontend/static/: index.html
crates/frontend/static/css/: main.css
crates/frontend/static/js/: core.js  ui.js
crates/frontend/tests/: feedback_tests.rs
crates/healthcare_ai/: Cargo.toml
crates/healthcare_ai/src/: data_processing.rs  metrics.rs  models.rs
crates/metrics/: Cargo.toml
crates/personalization_engine/: Cargo.toml
crates/personalization_engine/src/: data_processing.rs  errors.rs  handlers.rs  main.rs  models.rs  recommendations.rs  repository.rs  services.rs
crates/personalization_engine/src/models/: wide_and_deep.rs
crates/predictive_analytics/: Cargo.toml
crates/predictive_analytics/src/: api.rs  errors.rs  forecasting.rs  handlers.rs  lib.rs  models.rs  reporting.rs  visualization.rs
crates/predictive_analytics/src/models/: deep_ar.rs
crates/python_service/: Cargo.toml
crates/rust_anomaly_detector/: Cargo.toml
crates/rust_anomaly_detector/src/: evaluation.rs  lib.rs  models.rs
crates/rust_anomaly_detector/tests/: integration_tests.rs
crates/rust_service/: Cargo.toml
crates/rust_service/src/: api.rs  data_processing.rs  database.rs  lib.rs  metrics.rs  models.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs
crates/supply_chain_ai/: Cargo.toml
crates/supply_chain_ai/src/: forecasting.rs  models.rs
crates/sync_versions/: Cargo.toml
crates/vr_ar_ai/: Cargo.toml
dockerfiles/: CrateDockerfile  crates_ai_chatbot_Dockerfile  crates_ai_consulting_Dockerfile  crates_cybersecurity_ai_Dockerfile  crates_go_recommender_service_Dockerfile  crates_metrics_Dockerfile  crates_predictive_analytics_Dockerfile  crates_python_service_Dockerfile
locales/: en.toml
manifests/: README.md  configmap.yaml  content-creation-ai-deployment.yaml  cybersecurity-ai-service.yaml  hpa.yaml  namespace.yaml  personalization-engine-service.yaml  predictive-analytics-service.yaml  rust-anomaly-detector-deployment.yaml  rust-anomaly-detector-service.yaml  supply-chain-ai-deployment.yaml  supply-chain-ai-service.yaml
nb/: Phi_4-Conversational.ipynb
scripts/: health_check.sh  recover.sh  setup.sh
(+100 files in other folders)
