[workspace]
resolver = "2"
members = [
    "crates/ai_chatbot",
    "crates/ai_consulting",
    "crates/automl",
    "crates/common",
    "crates/content_creation_ai",
    "crates/cpp_module",
    "crates/cybersecurity_ai",
    "crates/frontend",
    "crates/go_recommender_service",
    "crates/healthcare_ai",
    "crates/metrics",
    "crates/personalization_engine",
    "crates/predictive_analytics",
    "crates/python_service",
    "crates/rust_anomaly_detector",
    "crates/rust_service",
    "crates/shared",
    "crates/supply_chain_ai",
    "crates/vr_ar_ai",
    "crates/sync_versions",
]

[patch.crates-io]
serde = { version = "1.0.215" }
serde_json = { version = "1.0.133" }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = { version = "1.0.93" }
thiserror = { version = "2.0.3" }
actix-web = { version = "4.4" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
prometheus = { version = "0.13.4" }
chrono = { version = "0.4.38", features = ["serde", "alloc"] }
async-trait = { version = "0.1.83" }
linfa = { version = "0.5.1" }
linfa-anomaly = { version = "0.5.1" }
ndarray = { version = "0.15" }
ndarray-stats = { version = "0.5" }
linregress = { version = "0.5" }
statrs = { version = "0.16" }
smartcore = { version = "0.3", features = ["serde"] }
