[package]
name = "ai_chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Common utilities
common = { path = "../common" }

# Machine Learning & NLP
rust-bert = "0.20"
tokenizers = "0.13"
tch = "0.13"                  # PyTorch bindings
sentence-transformers = "0.1"

# Caching
redis = { version = "0.23", features = ["tokio-comp"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.20"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
criterion = "0.4"  # For benchmarking
