[package]
name = "ai_chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value", "macros"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Caching
redis = { version = "0.23", features = ["tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
criterion = "0.4"
