[package]
name = "automl"
version = "0.1.0"
edition = "2021"
authors = ["AI Team"]
description = "AutoML module for automated machine learning optimization"
license = "MIT"

[dependencies]
# Core dependencies
common = { path = "../common", features = [
    "serialization",
    "async_runtime",
    "error_handling",
    "web_framework",
    "logging",
    "database",
    "utils",
    "machine_learning",
] }
shared = { path = "../shared", features = [
    "web_framework",
    "serde",
    "prometheus",
    "tracing",
    "tracing_subscriber",
    "thiserror",
    "lazy_static",
] }

# Additional dependencies specific to automl
tch = "0.10.1" # PyTorch bindings
petgraph = "0.6" # Graph data structures for NAS
polars = { version = "0.36", features = ["lazy", "random", "ndarray", "json"] }
arrow = "50.0"
rayon = "1.8" # Data parallelism
crossbeam = "0.8" # Concurrent data structures
ring = "0.17" # Cryptography
argon2 = "0.5" # Password hashing
config = "0.13" # Configuration management
dotenvy = "0.15" # Environment variable management
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "migrate",
] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.21" }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = { version = "0.5.1", features = ["async_tokio"] }
proptest = "1.3"
approx = "0.5"
test-log = "0.2"
wiremock = "0.5"

[[bench]]
name = "optimization_benchmarks"
harness = false
