     [package]
     name = "common"
     version = "0.1.0"
     edition = "2021"

     [dependencies]
     actix-web = "4.9.0"
     anyhow = "1.0.93"
     futures = "0.3.31"
     lazy_static = "1.5.0"
     log = "0.4.22"
     prometheus = "0.13.4"
     serde = { version = "1.0.215", features = ["derive"] }
     tokio = { version = "1.41.1", features = ["full"] }
     serde_json = "1.0.133"
     thiserror = "2.0.3"
     tracing = "0.1.40"
     tracing-subscriber = "0.3.18"
     uuid = { version = "1.11.0", features = ["v4"] }
     chrono = { version = "0.4.38", features = ["serde"] }
