[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.3"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
env_logger = "0.11.5"
serde_json = "1.0.133"
log = "0.4.22"
