[package]
name = "personalization_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits and futures
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Machine Learning
tch = "0.13"      # PyTorch bindings
ndarray = "0.15"  # N-dimensional arrays
smartcore = "0.3" # Machine learning algorithms
rand = "0.8"      # Random number generation

# Graph Neural Networks
petgraph = "0.6" # Graph data structures

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.20"

# Common utilities
common = { path = "../common" }
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
criterion = "0.4"  # For benchmarking
proptest = "1.0"   # Property testing
