[package]
name = "personalization_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits and futures
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0.3"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database and caching
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Machine Learning and Deep Learning
tch = "0.18.0"          # PyTorch bindings
ndarray = "0.16.1"      # N-dimensional arrays
ndarray-stats = "0.6.0" # Statistical functions for ndarray

# Common utilities
common = { path = "../common" }
shared = { path = "../shared" }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.24.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13.1"
criterion = "0.5.1" # For benchmarking
proptest = "1.5.0"  # Property testing
