[package]
name = "rust_anomaly_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

#TODO: Add other dependencies as needed
