[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", optional = true }
prometheus = { version = "0.13.4", optional = true }
serde = { version = "1.0.215", optional = true }
thiserror = { version = "2.0.3", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
lazy_static = { version = "1.5.0", optional = true }

[features]
default = [
    "web_framework",
    "serde",
    "prometheus",
    "tracing",
    "tracing_subscriber",
    "thiserror",
    "lazy_static",
]

# Individual features
web_framework = ["dep:actix-web"]
prometheus = ["dep:prometheus"]
serde = ["dep:serde"]
thiserror = ["dep:thiserror"]
tracing = ["dep:tracing"]
tracing_subscriber = ["dep:tracing-subscriber"]
lazy_static = ["dep:lazy_static"]
