[package]
name = "supply_chain_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", features = [
    "serialization",
    "async_runtime",
    "error_handling",
    "web_framework",
    "logging",
    "utils",
    "machine_learning",
] }

# Add any crate-specific dependencies below
